# reliable-ai-project

./: .gitignore  ENVIRONMENT.md  requirements-common.txt  requirements.txt  slurm-665737.out
CompareNoiseWaveMel/: README.md  pyproject.toml  requirements-espnet.txt  requirements-nemo.txt  requirements.txt
CompareNoiseWaveMel/configs/: conformer_ctc.json
CompareNoiseWaveMel/scripts/: eval_attack_conformer_ctc.py  eval_attack_nemo_conformer_ctc.py  eval_attack_nemo_encoder_char_ctc.py  eval_attack_owsm_ctc.py  finetune_nemo_conformer_ctc.py  finetune_nemo_encoder_char_ctc.py  prepare_team_fleurs_manifest.py  run_epsilon_sweep_test.sh  run_phoneme_pgd_experiment.py  summarize_wave_mel_results.py  train_conformer_ctc.py  train_ko_zh.py
CompareNoiseWaveMel/src/noise_robust_asr/: __init__.py  data.py  metrics.py  text.py
CompareNoiseWaveMel/src/noise_robust_asr/attacks/: pgd.py
CompareNoiseWaveMel/src/noise_robust_asr/models/: __init__.py  conformer_ctc.py  nemo_conformer_ctc.py  nemo_encoder_char_ctc.py  owsm_ctc.py
ReliableAI_team_project/: .gitignore  README.md  exe.py  requirements.txt
ReliableAI_team_project/src/: attack.py  data_load.py
ReliableAI_team_project/tests/: make_wav.py  print_first_row.py
scripts/: create_venv.sh
